configure expo acc and download apk

--- a/HNGMobileApp/app.json
+++ b/HNGMobileApp/app.json
@@ -15,7 +15,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.wayneleon1.HNGMobileApp"
     },
     "web": {
       "bundler": "metro",
@@ -36,6 +37,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "a10829b0-ebd6-46c2-a0e9-36f2b49474af"
+      }
     }
   }
 }
