--- a/HNGMobileApp/package.json
+++ b/HNGMobileApp/package.json
@@ -50,5 +50,8 @@
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
+    "resolutions": {
+      "@expo/cli": "xxx" 
+    },
   "private": true
 }
